--- a/config/locales/eng/prints/purchase_order.xml
+++ b/config/locales/eng/prints/purchase_order.xml
@@ -23,7 +23,7 @@
       <part height="15mm">
 	<set>
 	  <text value="Bon de commande N°{{purchase_order/number}}" bold="true" left="50%" align="center" top="7mm" size="12"/>
-	  <text value="À {{purchase_order.company.default_contact.mail_area/city_name?capitalize=true}}, le {{purchase_order/created_on?format=month_letter}}" left="100%" align="right"/>
+	  <text value="À {{purchase_order.company.default_mail_address.mail_area/city_name?capitalize=true}}, le {{purchase_order/created_on?format=month_letter}}" left="100%" align="right"/>
 	</set>      
       </part>
 
